--- a/mycelium/apps/mycelium_core/static/css/people.css
+++ b/mycelium/apps/mycelium_core/static/css/people.css
@@ -459,3 +459,13 @@ detail_tab_contents tabbed_box {
 detail_tab_contents input, detail_tab_contents textarea {
 	font-size: 1.2em;
 }
+.basic_info tabbed_box.contact_info {
+	width: 50%;
+}
+.contact_info .contact_type {
+	float: left;
+	margin-right: 5px;
+}
+.contact_info .phone_email .generic_field_label {
+	display: none;
+}
