--- a/mycelium/apps/people/templates/people/person.html
+++ b/mycelium/apps/people/templates/people/person.html
@@ -34,7 +34,7 @@ $(function(){
 </script>
 {% endif %}
 <script>
-var url_options = {
+var person_form_options = {
 		"form_objects": {
 			"person": {
 				save_object_url: "{% url people:person_save %}",
@@ -42,23 +42,26 @@ var url_options = {
 				delete_object_url: "{% url people:person_delete %}"
 			},
 			"phone_number": {
+				django_formset_prefix: "{{phone_formset.prefix}}",
 				save_object_url: "{% url people:phone_number_save %}",
 				new_object_url: "{% url people:phone_number_new %}",
-				delete_object_url: "{% url people:phone_number_delete %}"			
+				delete_object_url: "{% url people:phone_number_delete %}"
 			},
 			"email": {
+				django_formset_prefix: "{{email_formset.prefix}}",
 				save_object_url: "{% url people:email_save %}",
 				new_object_url: "{% url people:email_new %}",
 				delete_object_url: "{% url people:email_delete %}"
 			},
 			"employee": {
+				django_formset_prefix: "{{employee_formset.prefix}}",
 				save_object_url: "{% url people:employee_save %}",
 				new_object_url: "{% url people:employee_new %}",
 				delete_object_url: "{% url people:employee_delete %}"
 			}
 		}
 	}
-	person_form_options = $.extend(true, person_form_options, url_options);
+	// person_form_options = $.extend(true, person_form_options, url_options);
 	$("#basic_info_form").genericAjaxForm(person_form_options);
 </script>
 
@@ -70,7 +73,7 @@ var url_options = {
 
 
 
-<div itemscope itemtype="http://schema.org/Person" class="basic_info person canonical" pk="{{person.pk}}">
+<div itemscope itemtype="http://schema.org/Person" class="basic_info person canonical" form_object_type="person" pk="{{person.pk}}">
 	<div class="name_phone_email">
 		<div class="name" itemprop="name">
 			{% generic_editable_field form.first_name %}
@@ -88,7 +91,7 @@ var url_options = {
 				<div id="no_home_contact_info_message"></div>
 				<div class="phone_email">
 				{% for p_form in phone_formset.forms %}
-				<span class="phone_number canonical" pk="{{p_form.instance.pk}}">
+				<span class="phone_number canonical" form_object_type="phone_number" pk="{{p_form.instance.pk}}">
 					<span class="contact_type">{% generic_editable_field p_form.contact_type %}</span>
 					<span itemprop="telephone">{% generic_editable_field p_form.phone_number %}</span>
 					<span class="primary">{% generic_editable_field p_form.primary %}</span>
@@ -99,7 +102,7 @@ var url_options = {
 				
 
 				{% for e_form in email_formset.forms %}
-				<span class="email canonical" pk="{{e_form.instance.pk}}">
+				<span class="email canonical" form_object_type="email" pk="{{e_form.instance.pk}}">
 					<span class="contact_type">{% generic_editable_field e_form.contact_type %}</span>
 					<span itemprop="email">{% generic_editable_field e_form.email %}</span>
 					<span class="primary">{% generic_editable_field e_form.primary %}</span>
@@ -132,7 +135,7 @@ var url_options = {
 		</box_content>
 		</tabbed_box>
 		{% for e_form in employee_formset.forms %}
-		<span class="employee canonical" pk="{{e_form.instance.pk}}">
+		<span class="employee canonical" form_object_type="employee" pk="{{e_form.instance.pk}}">
 		<tabbed_box class="open" name="job">
 			<tab_title_container>
 			<a href="{% url organizations:organization e_form.instance.organization.pk %}">
