--- a/mycelium/apps/people/templates/people/person.html
+++ b/mycelium/apps/people/templates/people/person.html
@@ -28,7 +28,7 @@
 {% if request.GET.edit == "ON" or form.instance.full_name == "Unnamed Person"  %}
 <script type="text/javascript" charset="utf-8">
 $(function(){
-    $("#basic_info_form").genericFieldForm('toggle_edit');
+    $("#basic_info_form").genericAjaxForm('toggle_edit');
 	$("#id_first_name").focus();
 });
 </script>
@@ -61,75 +61,7 @@ $(function(){
 			}
 		}
 	}
-	// person_form_options = $.extend(true, person_form_options, url_options);
-	
 
-	var person_data = {};
-	person_data["person"] = {
-		"initial_data" : {
-			"first_name": "{{person.first_name}}",
-			"last_name": "{{person.last_name}}",
-			"birth_month": "{{person.birth_month}}",
-			"birth_day": "{{person.birth_day}}",
-			"birth_year": "{{person.birth_year}}",
-			"line_1": "{{person.line_1}}",
-			"line_2": "{{person.line_2}}",
-			"city": "{{person.city}}",
-			"state": "{{person.state}}",
-			"postal_code": "{{person.postal_code}}",
-		},
-		"form_fields": {
-			"first_name": "{{form.first_name|addslashes|strip_newlines}}",
-			"last_name": "{{form.last_name|addslashes|strip_newlines}}",
-			"birth_month": "{{form.birth_month|addslashes|strip_newlines}}",
-			"birth_day": "{{form.birth_day|addslashes|strip_newlines}}",
-			"birth_year": "{{form.birth_year|addslashes|strip_newlines}}",
-			"line_1": "{{form.line_1|addslashes|strip_newlines}}",
-			"line_2": "{{form.line_2|addslashes|strip_newlines}}",
-			"city": "{{form.city|addslashes|strip_newlines}}",
-			"state": "{{form.state|addslashes|strip_newlines}}",
-			"postal_code": "{{form.postal_code|addslashes|strip_newlines}}",
-		}
-	}
-	person_data["phone"] = [];
-	{% for p_form in phone_formset.forms %} 
-		person_data["phone"].push(
-		{
-			"initial_data": {
-				"contact_type": "{{p_form.instance.contact_type}}",
-				"phone_number": "{{p_form.instance.phone_number}}",
-				"primary": {{p_form.instance.primary|lower}},
-				"pk": {{p_form.instance.pk}},
-			},
-			"form_fields": {
-				"contact_type": "{{p_form.contact_type|addslashes|strip_newlines}}",
-				"phone_number": "{{p_form.phone_number|addslashes|strip_newlines}}",
-				"primary": "{{p_form.primary|lower|addslashes|strip_newlines}}",	
-				"pk": {{p_form.instance.pk}},
-			}
-			
-		});
-	{% endfor %}
-	person_data["email"] = [];
-	{% for e_form in email_formset.forms %} 
-		person_data["email"].push(
-		{
-			"initial_data": {
-				"contact_type": "{{e_form.instance.contact_type}}",
-				"email": "{{e_form.instance.email}}",
-				"primary": {{e_form.instance.primary|lower}},
-				"pk": {{e_form.instance.pk}},
-			},
-			"form_fields": {
-				"contact_type": "{{e_form.contact_type|addslashes|strip_newlines}}",
-				"email": "{{e_form.email|addslashes|strip_newlines}}",
-				"primary": "{{e_form.primary|lower|addslashes|strip_newlines}}",	
-				"pk": {{e_form.instance.pk}},
-			}
-		});
-	{% endfor %}
-	// personPage.state.data = person_data;
-	// personPage.init();
 	$("#basic_info_form").genericAjaxForm(person_form_options);
 
 
@@ -241,7 +173,7 @@ $(function(){
 		{% endfor %}
 		{{employee_formset.management_form}}
 
-
+<div class="additional_information"></div>
 </div>
 
 </form>
