--- a/mycelium/apps/mycelium_core/static/css/people.css
+++ b/mycelium/apps/mycelium_core/static/css/people.css
@@ -551,3 +551,9 @@ detail_tab_contents input, detail_tab_contents textarea {
 .edit_mode_on #phone_number_form_container {
 	margin-bottom: 30px;
 }
+.only_one .delete {
+	display: none;
+}
+.only_one .primary .faux_radio {
+	background: transparent;
+}
