added requirements, start of API

--- a/mycelium/templates/base.html
+++ b/mycelium/templates/base.html
@@ -21,6 +21,11 @@
   {% compress js %}
   <script src="{{STATIC_URL}}js/lib/modernizr-1.6.min.js" ></script>
   <script src="{{STATIC_URL}}js/contrib/jquery-1.4.3.min.js" ></script>
+  <script src="{{STATIC_URL}}js/contrib/underscore-min.js"></script>
+  <script src="{{STATIC_URL}}js/contrib/backbone-min.js"></script>
+  <script src="{{STATIC_URL}}js/contrib/backbone-relational.js"></script>
+  <script src="{{STATIC_URL}}js/backbone-tastypie.js"></script>
+  <script src="{{STATIC_URL}}js/contrib/ICanHaz.min.js"></script>
   {% endcompress %}
 
   {% block base_js %}
