--- a/mycelium/templates/404.html
+++ b/mycelium/templates/404.html
@@ -3,14 +3,14 @@
 <html lang="en">
 <head>
 	<title>404 Error - That page doesn't exist!</title>
-	<link rel="stylesheet" href="{{STATIC_URL}}css/main.css" type="text/css" media="screen, projection"/>
-	<link rel="stylesheet" href="{{STATIC_URL}}css/error_pages.css" type="text/css" media="screen, projection"/>
+	<link rel="stylesheet" href="https://goodcloud1.s3.amazonaws.com/css/main.css" type="text/css" media="screen, projection"/>
+	<link rel="stylesheet" href="https://goodcloud1.s3.amazonaws.com/css/error_pages.css" type="text/css" media="screen, projection"/>
 </head>
 <body>
 	
 	<div id="error_message">
 	<div class="adorable_image">
-	<img src="{% versioned_static  "images/icon-raincloud-400.png" %}" />
+	<img src="https://goodcloud1.s3.amazonaws.com/images/icon-sadcloud-400.png" />
 	</div>
 	<div class="detail_box">
 	<h1>Oh Dear.  Looks like we don't have that page.</h1>
