--- a/mycelium/templates/500.html
+++ b/mycelium/templates/500.html
@@ -3,8 +3,8 @@
 <html lang="en">
 <head>
 	<title>500 Error - Unable to load the requested page!</title>
-	<link rel="stylesheet" href="{{STATIC_URL}}css/main.css" type="text/css" media="screen, projection"/>
-	<link rel="stylesheet" href="{{STATIC_URL}}css/error_pages.css" type="text/css" media="screen, projection"/>
+	<link rel="stylesheet" href="https://goodcloud1.s3.amazonaws.com/css/main.css" type="text/css" media="screen, projection"/>
+	<link rel="stylesheet" href="https://goodcloud1.s3.amazonaws.com/css/error_pages.css" type="text/css" media="screen, projection"/>
 {# 	<link rel="stylesheet" href="https://goodcloud1.s3.amazonaws.com/css/main.css" type="text/css" media="screen" title="" charset="utf-8"> #}
 {#	<link rel="stylesheet" href="https://goodcloud1.s3.amazonaws.com/css/error_pages.css" type="text/css" media="screen" title="" charset="utf-8"> #}
 </head>
