--- a/mycelium/templates/base.html
+++ b/mycelium/templates/base.html
@@ -45,6 +45,7 @@
 {% endblock %}
 {% analytical_body_bottom %}
 {% block javascript %}{% compress js %}
+{% if ENV == "LIVE" %}
 <script type="text/javascript">
   var _gauges = _gauges || [];
   (function() {
@@ -58,6 +59,7 @@
     s.parentNode.insertBefore(t, s);
   })();
 </script>
+{% endif %}
 <!--[if lt IE 7 ]>
   <script src="{{STATIC_URL}}js/lib/dd_belatedpng.js"></script>
   <script>DD_belatedPNG.fix('img, .png_bg');</script>
