--- a/mycelium/apps/marketing_site/templates/marketing_site/base.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/base.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "base.html" %}{% load compress %}
 {% block css %}{{block.super}}
 {% compress css %}
 	<link rel="stylesheet" href="{{STATIC_URL}}css/style.css" type="text/css" media="screen, projection"/>
