--- a/mycelium/apps/marketing_site/templates/marketing_site/newsletter/2011_07.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/newsletter/2011_07.html
@@ -12,7 +12,7 @@
 	<div class="headliner_article">
 		<div class="article_title">Don't Let Your Nonprofit's Knowledge Leave Because of Turnover</div>
 		<div class="article_teaser">
-		<img class=" article_teaser_image" src="{% versioned_static  "images/newsletters/2011-07/turnover-60.png" %}" />
+		<img class=" article_teaser_image" src="{% static  "images/newsletters/2011-07/turnover-60.png" %}" />
 		<p>Earlier this month, the Meyer Foundation and CompassPoint released a study showing that two-thirds of the nonprofit Executive Directors they surveyed were planning on leaving their current job within five years.  Among the reasons that leaders cited for leaving were financial problems, under-performing boards, and a burdensome time commitment.  </p>
 		
 		<p>Those reasons aren't exactly eye-opening revelations for most that have experience in the nonprofit world.  Still, that 67% number is significant.  Turnover is a major issue that all organizations have to overcome, but its effect seems to be amplified for nonprofits, especially those with small staff size and limited resources.</p>
@@ -23,7 +23,7 @@
 	<div class="column_1">
 		<div class="article_title">Remember conversations, birthdays, and more with the new GoodCloud release!</div>
 		<div class="article_teaser">
-		<img class="article_teaser_image" src="{% versioned_static  "images/newsletters/2011-07/conversations-50.png" %}" />
+		<img class="article_teaser_image" src="{% static  "images/newsletters/2011-07/conversations-50.png" %}" />
 			<p>Turnover's biggest loss can be the relationships - that personal knowledge of donors, volunteers, and participants that leave with a former employee. This month, we released the a way to keep that information, even when turnover happens. We call it conversations.</p>
 
 			<p>At its most basic, conversations is a log of every interaction you've had with a person.  You can specify when and how it happened, and take any notes that are relevant.  Now, if a staff member moves on, you'll still have access to the details of their interactions, and can get the new employee up to speed quickly.</p>
@@ -35,7 +35,7 @@
 
 		<div class="article_title">Google+ is a new social network. What's it mean for nonprofits?</div>
 			<div class="article_teaser">
-			<img class="article_teaser_image" src="{% versioned_static  "images/newsletters/2011-07/google-plus-50.png" %}" />
+			<img class="article_teaser_image" src="{% static  "images/newsletters/2011-07/google-plus-50.png" %}" />
 			<p>There's a new kid on the social media block, and it goes by the name of Google.  Google+, the search powerhouse's latest (and best) attempt to take on the social space has launched, and is now in the hands of a few folks with "field trial" accounts. (Full disclosure - I'm one of them) But, what in the name of tweeting, liking, and +1ing does this actually mean for nonprofits?  Let's take a look.</p>
 
 
@@ -46,7 +46,7 @@
 	<div class="column_2">
 		<div class="article_title">Summer means grilling. Here's our favorite recipe for burgers.</div>
 		<div class="article_teaser">
-		<img class="article_teaser_image" src="{% versioned_static  "images/newsletters/2011-07/burger-50.png" %}" />
+		<img class="article_teaser_image" src="{% static  "images/newsletters/2011-07/burger-50.png" %}" />
 			<p>Bar-b-qued burgers are a staple of summer, even for vegetarians. Tom (carnivore) and Steven (vegetarian) take on the best burger recipe for summer, and the results may surprise you!.</p>
 
 			<p>In this inaugural edition of the <span class="the_good_times">The Good Times</span>, Tom and Steven put their best recipes to each other's tastebuds for the test - with a twist!  They trade recipes, cook each other's dish, subsituting meat/veggies as needed - it's a cuisine showdown for summer! Find out who wins!</p>
@@ -57,7 +57,7 @@
 
 		<div class="article_title">Nonprofit News Round-up</div>
 		<div class="article_teaser">
-			<img class="article_teaser_image" src="{% versioned_static  "images/newsletters/2011-07/news-50.png" %}" />
+			<img class="article_teaser_image" src="{% static  "images/newsletters/2011-07/news-50.png" %}" />
 			<p>Since we serve exclusively nonprofits, we've got a great pulse on what's happening around the community.  Here's the latest!</p>
 				<ul>
 				<li>The Minnesota government shutdown, and how it's wreaking havoc on nonprofits there.</li>
