reworked versioned_static

--- a/mycelium/apps/logo_maker/templates/logo_maker/list.html
+++ b/mycelium/apps/logo_maker/templates/logo_maker/list.html
@@ -1,5 +1,5 @@
 {% extends "logo_maker/base.html" %}
-{% load humanize thumbnail %}
+{% load humanize thumbnail versioned_static %}
 {% block title %}Logo Maker - All Logos{% endblock %}
 {% block javascript %}{{block.super}}
 {% compress js %}
