--- a/mycelium/apps/marketing_site/templates/marketing_site/newsletter/2011_07.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/newsletter/2011_07.html
@@ -1,5 +1,5 @@
 {% extends "marketing_site/newsletter/base.html" %}
-{% load i18n  %}
+{% load i18n versioned_static  %}
 
 {% block newsletter_body %}
 <div class="newsletter_issue">
