--- a/mycelium/apps/marketing_site/templates/marketing_site/newsletter.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/newsletter.html
@@ -1,5 +1,5 @@
 {% extends "marketing_site/base.html" %}
-{% load i18n generic_fields friendly_data_formatting  %}
+{% load i18n generic_fields friendly_data_formatting versioned_static %}
 {% block title %}News from around the nonprofit world with The GoodCloud Times!{% endblock %}
 {% block description %}Our monthly newsletter keeps you up-to-date on the latest news in the nonprofit sector - and throws in a great recipe to boot!{% endblock %}
 {% block page_header %}Real people, real voices.{% endblock %}
