--- a/mycelium/apps/marketing_site/templates/marketing_site/praise.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/praise.html
@@ -1,5 +1,5 @@
 {% extends "marketing_site/base.html" %}
-{% load i18n generic_fields friendly_data_formatting  %}
+{% load i18n generic_fields friendly_data_formatting versioned_static %}
 {% block title %}Testimonials and Reviews: Staff and volunteers love using GoodCloud!{% endblock %}
 {% block description %}GoodCloud users rave about how easy it is to use, and how it's helping their organizations run more efficently. See what they had to say!{% endblock %}
 {% block extra_body %}class="praise"{% endblock %}
