--- a/mycelium/apps/marketing_site/templates/marketing_site/screenshots.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/screenshots.html
@@ -1,5 +1,5 @@
 {% extends "marketing_site/base.html" %}
-{% load i18n generic_fields friendly_data_formatting  %}
+{% load i18n generic_fields friendly_data_formatting versioned_static %}
 {% block title %}Screenshots - see what easy to use for nonprofits looks like.{% endblock %}
 {% block description %}Watch a video interview with GoodCloud's CEO, and see how it helps nonprofits organize and run more easily!{% endblock %}
 
